--- a/site/module2-solution/index.html
+++ b/site/module2-solution/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>Nice Restaurant Menu</title>
 </head>
 <body>
   <div class="background">
